--- a/p2p_balance_checker/platform_settings.json
+++ b/p2p_balance_checker/platform_settings.json
@@ -1,5 +1,8 @@
 {
   "Finbee": {
-    "url": "https://p2p.finbee.lt/prisijungti"
+    "url": "https://p2p.finbee.lt/prisijungti",
+    "url_dashboard": "https://p2p.finbee.lt/dashboard",
+    "user_element": "input[name=email]",
+    "password_element": "input[name=password]"
   }
 }
