--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
+beautifulsoup4= "*"
 python-dotenv = "*"
+requests = "*"
 selenium = "*"
 
 [dev-packages]
