--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 beautifulsoup4~=4.9.3
-lxml~=4.6.2
-pytest~=6.2.1
-pytest-cov?=2.10.1
 python-dotenv~=0.15.0
 requests~=2.25.1
 selenium~=3.141.0
+SQLAlchemy~=1.3.22
