--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4~=4.9.3
+lxml~=4.6.2
 python-dotenv~=0.15.0
 requests~=2.25.1
 selenium~=3.141.0
-SQLAlchemy~=1.3.22
+sqlalchemy~=1.3.22
