Remove unused dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BONDORA_API_HEADER="{'Authorization': 'Bearer INSERT'}"
+BONDORA_AUTHORIZATION="Bearer INSERT"
 BONDORA_USERNAME=INSERT
 BONDORA_PASSWORD=INSERT
 
